# mcp-obo-aca

./: AGENTS.md  CONTRIBUTING.md  README.md  azure.yaml  justfile  opencode.json  thething.md
.devcontainer/: devcontainer.json  setupEnv.sh
.fs2/: .gitignore  config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: gh-pr-create.agent.md
.github/hooks/: audit.json
.github/skills/agnostic-prompt-standard/: SKILL.md
.github/skills/agnostic-prompt-standard/assets/agents/: vscode-agent-v1.0.0.agent.md
.github/skills/agnostic-prompt-standard/assets/constants/: constants-json-block-v1.0.0.example.md
.github/skills/agnostic-prompt-standard/references/: 03-agentic-control.md  04-schemas-and-types.md  05-grammar.md
.github/workflows/: ci.yml  deploy.yml
audit/: log-prompt.sh  log-session-end.sh  log-session-start.sh  log-tool-result.sh  log-tool-use.sh  tool-stats.csv
docs/: workshop-plan.md
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
infra/modules/: container-app.bicep  container-apps-environment.bicep  container-registry.bicep  fetch-container-image.bicep  log-analytics.bicep  managed-identity.bicep
src/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
src/auth/: __init__.py  obo.py  verifier.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  factory.py
src/docs/: 01-introduction.md  02-azure-setup.md  03-server-implementation.md  04-running-and-testing.md  05-troubleshooting.md  06-cicd.md  architecture.excalidraw  blog-post.md
src/docs/adr/: ADR-001-mcp-server-hosting-architecture.md  README.md
src/services/: __init__.py  general_service.py
src/tests/: __init__.py  conftest.py  test_auth_flow.py  test_obo.py  test_verifier.py
src/utils/: __init__.py  auth_utils.py  date_utils.py  formatters.py
