[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "demo-mcp-server"
description = "Demo MCP Server with OAuth 2.1 authentication and On-Behalf-Of flow for Microsoft Graph API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Demo MCP Server Contributors" }
]
dynamic = ["version"]

# Core runtime dependencies (pinned for reproducibility)
dependencies = [
  "fastmcp==2.13.0.2",
  "uvicorn[standard]==0.36.0",
  "python-dotenv==1.1.1",
  "azure-identity==1.19.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.6.1",
  "python-multipart==0.0.18",
  "httpx==0.28.1",
  "PyJWT==2.9.0",
  "aiohttp==3.10.11",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "cryptography>=41.0.0",
  "PyJWT==2.9.0",
]

[project.urls]
Homepage = "https://github.com/huangyingting/mcp-workshop"
Repository = "https://github.com/your-org/demo-mcp-server.git"

# Version is sourced from the package __init__.py
[tool.hatch.version]
path = "__init__.py"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["**/*", "README.md"]

[project.scripts]
demo-mcp-server = "server:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/", "__pycache__/"]
# Avoid duplicate module detection
explicit_package_bases = true
namespace_packages = true
# Relax strict type checking for gradual adoption
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["__pycache__", ".git", ".pytest_cache", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - let black handle it

[tool.black]
target-version = ["py311"]
line-length = 88
exclude = '''
/(
    __pycache__
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | \.ruff_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
